# bazel-bsp

./: .bazelignore  .bazelrc  .bazelversion  .gitignore  .mailmap  BUILD  CHANGELOG.md  LICENSE.txt  MODULE.bazel  README.md  TODO  WORKSPACE  WORKSPACE.bzlmod  aspects.bzl  bazel-steward.yaml  buildAndRunLocally.sh  install-bazel.sh  install.sh  junit5.bzl  maven_install.json  non_module_deps.bzl  pom.xml  projectview.bazelproject  qodana.yaml  test.sh  test_runner.sh  third_party.bzl
.codecanvas/: copyIdeaProjectSettings.sh  installPlugins.sh  on-activation.sh  on-initialisation.sh
.codecanvas/vnc/: vnc-config.sh  vnc.sh
.github/workflows/: benchmark.yml  dependencies.yml  format.ci.yml  format.yml  integration-test.yml  integration-tests.yml  java.ci.yml  tests.yml  unit-tests.yml
.teamcity/: pom.xml  settings.kts
.teamcity/Bazel_BazelBsp/: project-config.xml
.teamcity/Bazel_BazelBsp/buildTypes/: Bazel_BazelBsp_BazelBspResults.xml  Bazel_BazelBsp_BuildBuildBazelBsp.xml  Bazel_BazelBsp_E2eTestsE2eLocalJdkTestBazel532test.xml  Bazel_BazelBsp_E2eTestsE2eLocalJdkTestBazel640test.xml  Bazel_BazelBsp_E2eTestsE2eRemoteJdkTestBazel532test.xml  Bazel_BazelBsp_E2eTestsE2eRemoteJdkTestBazel640test.xml  Bazel_BazelBsp_E2eTestsE2eSampleRepoTestBazel532test.xml  Bazel_BazelBsp_E2eTestsE2eSampleRepoTestBazel640test.xml  Bazel_BazelBsp_E2eTestsE2eServerDownloadsBazeliskTestBazel640test.xml  Bazel_BazelBsp_FormatBuildifier.xml  Bazel_BazelBsp_UnitTestsUnitTests.xml
.teamcity/Bazel_BazelBsp/vcsRoots/: Bazel_BazelBsp_BazelBspTcConfig.xml  Bazel_BazelBsp_BazelBspVcs.xml
.teamcity/Scala_BazelBsp/: project-config.xml
.teamcity/Scala_BazelBsp/buildTypes/: Scala_BazelBsp_BuildBuildTheProject.xml  Scala_BazelBsp_E2eTestsE2eBazelBspActionGraphV1TestTest.xml  Scala_BazelBsp_E2eTestsE2eBazelBspActionGraphV2TestTest.xml  Scala_BazelBsp_E2eTestsE2eBazelBspCppProjectTestTest.xml  Scala_BazelBsp_E2eTestsE2eBazelBspEntireRepositoryImportTestTest.xml  Scala_BazelBsp_E2eTestsE2eBazelBspJava11ProjectTestTest.xml  Scala_BazelBsp_E2eTestsE2eBazelBspJava8ProjectTestTest.xml  Scala_BazelBsp_E2eTestsE2eBazelBspLocalJdkTestTest.xml  Scala_BazelBsp_E2eTestsE2eBazelBspRemoteJdkTestTest.xml  Scala_BazelBsp_E2eTestsE2eBazelBspSampleRepoTestTest.xml  Scala_BazelBsp_FormatBuildifier.xml  Scala_BazelBsp_FormatGoogleJavaFormat.xml  Scala_BazelBsp_PipelineResults.xml  Scala_BazelBsp_ReleaseNewRelease.xml  Scala_BazelBsp_UnitTestsUnitTests.xml
.teamcity/Scala_BazelBsp/vcsRoots/: Scala_BazelBsp_BazelBspTest.xml  Scala_BazelBsp_BazelBspVcs.xml
.teamcity/configurations/: baseConfiguration.kt  baseConfiguration.kts  build.kts  buildAndTest.kts  e2eTests.kts  format.kts  release.kts  resultsAggregator.kt  resultsAggregator.kts  unitTests.kts
.teamcity/configurations/bazelBsp/: bazelBenchmark.kt  bazelBenchmark.kts  bazelBuild.kt  bazelBuild.kts  bazelE2ePluginTests.kts  bazelE2eTests.kt  bazelE2eTests.kts  bazelFormat.kt  bazelFormat.kts  bazelUnitTests.kt  bazelUnitTests.kts
.teamcity/patches/buildTypes/: BuildBuildTheProject.kts  E2eTestsE2eBazelBspActionGraphV1TestTest.kts  E2eTestsE2eBazelBspActionGraphV2TestTest.kts  E2eTestsE2eBazelBspEntireRepositoryImportTestTest.kts  E2eTestsE2eBazelBspJava11ProjectTestTest.kts  E2eTestsE2eBazelBspJava8ProjectTestTest.kts  PipelineResults.kts  (+5 more)
aspects/: BUILD  core.bzl  extensions.bzl  runtime_classpath_query.bzl
aspects/utils/: java_utils.bzl  utils.bzl
bazelrunner/: BUILD
bspcli/: BUILD  gen.py  integration_test.bzl  parser.py
central-sync/: BUILD  deployment.properties
commons/: BUILD
docs/: BUMPVERSION.md  kotlin.md  scala.md
docs/dev/: ASPECTS.md  BUMPVERSION.md  CODEBASE.md  CONTRIBUTING.md  EXTENDING.md
docs/rules/: RULES_JAVA.md  SUPPORTED_RULES.md
docs/usage/: kotlin.md
e2e/: BUILD  runAll.sh  runTest.sh  runTestForAllBazelVersions.sh  runTestForBazelVersions.sh  testkit.patch
e2e/test-resources/: .java11bazel1234rc
e2e/test-resources/android-kotlin-project/: .bazelrc  MODULE.bazel
e2e/test-resources/android-kotlin-project/src/main/: AndroidManifest.xml  BUILD
e2e/test-resources/android-kotlin-project/src/main/java/com/example/myapplication/: AndroidManifest.xml  BUILD  MainActivity.kt
e2e/test-resources/android-kotlin-project/src/main/java/com/example/myapplication/res/layout/: activity_main.xml
e2e/test-resources/android-kotlin-project/src/test/java/com/example/myapplication/: AndroidManifest.xml  BUILD  MainActivityTest.kt
e2e/test-resources/android-project/: .bazelrc  MODULE.bazel
e2e/test-resources/android-project/src/main/: AndroidManifest.xml  BUILD
e2e/test-resources/android-project/src/main/java/com/example/myapplication/: AndroidManifest.xml  BUILD  MainActivity.java
e2e/test-resources/android-project/src/test/java/com/example/myapplication/: AndroidManifest.xml  BUILD  MainActivityTest.java
example/amsterdam/: BUILD
example/animals/: BUILD  generator.bzl
example/animals2/: BUILD
example/kotlincplugin/: UserIsOpenTest.kt
example/krakow/: BUILD
example/munich/: BUILD  munich.py
executioncontext/api/: BUILD  README.md
executioncontext/installationcontext/: BUILD
executioncontext/projectview/: BUILD  README.md
executioncontext/workspacecontext/: BUILD
hello-world/: BUILD  Cargotoml  WORKSPACE  cargo-metadata  cargocheck
hello-world/hello_world/: BUILD  Cargotoml
install/: BUILD  README.md
install-server/: BUILD
log4j_config/: BUILD
logger/: BUILD
path/to/: projectview.bazelproject
projectview/: BUILD  README.md
protocol/: BUILD
rules/bazel_integration_test/: defs.bzl
rules/kotlin/: junit5.bzl
sample-repo/: WORKSPACE
sample-repo/.bsp/: bazelbsp.json
sample-repo/dep/: BUILD  Dep.scala  JavaTest.java
sample-repo/example/: BUILD  Example.scala  ExampleTest.scala
sample-repo/target_without_args/: Example.scala
sample-repo/target_without_jvm_flags/: BUILD  Example.scala
sample-repo/target_without_main_class/: BUILD  Example.scala
test-resources/.bsp/: bazelbsp.json
test-resources/action-graph-v2/: WORKSPACE
test-resources/sample-repo/: WORKSPACE
utils/: BUILD
(+1411 files in other folders)
